--- a/Assignment1_CLI/Assignment1_CLI.cbp
+++ b/Assignment1_CLI/Assignment1_CLI.cbp
@@ -14,11 +14,12 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
-				<Linker>
-					<Add library="../../../../usr/lib/x86_64-linux-gnu/libGLU.so" />
-					<Add library="../../../../usr/lib/x86_64-linux-gnu/libglut.so" />
-					<Add library="../../../../usr/lib/x86_64-linux-gnu/mesa/libGL.so" />
-				</Linker>
+		        <Linker>
+			        <Add library="lib/libGL.so" />
+			        <Add library="lib/libGLEW.so" />
+			        <Add library="lib/libGLU.so" />
+			        <Add library="lib/libglut.so" />
+		        </Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/CS258CLI" prefix_auto="1" extension_auto="1" />
