modify make file

--- a/Assignment1_CLI/Makefile
+++ b/Assignment1_CLI/Makefile
@@ -1,14 +1,14 @@
 SHELL = /bin/sh
-prefix = /usr/lib/i386-linux-gnu #for Knopix
-#prefix = ./lib  #for Ubuntu
+#prefix = /usr/lib/i386-linux-gnu#for Knopix
+prefix = ./lib#for Ubuntu
 CC = gcc
 C++ = g++
-#GLUT_LIBS = $(prefix)/libglut.so #for Ubuntu
-GLUT_LIBS = $(prefix)/libglut.so.3 # for Knopix
+GLUT_LIBS = $(prefix)/libglut.so #for Ubuntu
+#GLUT_LIBS = $(prefix)/libglut.so.3 # for Knopix
 X_LIBADD =  -lXmu -lXext -lXi -lX11
 INCLUDES = -Iinclude -I/usr/include  
-#LDADD = $(GLUT_LIBS) $(prefix)/libGLU.so $(prefix)/libGL.so  -lm  #for Ubuntu
-LDADD = $(GLUT_LIBS) $(prefix)/libGLU.so.1 $(prefix)/libGL.so.1  -lm #for Knopix
+LDADD = $(GLUT_LIBS) $(prefix)/libGLU.so $(prefix)/libGL.so  -lm#for Ubuntu
+#LDADD = $(GLUT_LIBS) $(prefix)/libGLU.so.1 $(prefix)/libGL.so.1  -lm#for Knopix
 CFLAGS = -g -O2 -Wall -fomit-frame-pointer -ffast-math -fexpensive-optimizations -D_REENTRANT
 COMPILE = $(C++) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
 LINK = $(C++) $(CFLAGS) $(LDFLAGS) -o $@
