--- a/Assignment5_RayTracing/Assignment5_RayTracing.cbp
+++ b/Assignment5_RayTracing/Assignment5_RayTracing.cbp
@@ -14,6 +14,12 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="lib/libGL.so" />
+					<Add library="lib/libGLEW.so" />
+					<Add library="lib/libGLU.so" />
+					<Add library="lib/libglut.so" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Assignment5_RayTracing" prefix_auto="1" extension_auto="1" />
@@ -32,7 +38,48 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="3D.h" />
+		<Unit filename="AppContext.h" />
+		<Unit filename="CMDRead.cpp" />
+		<Unit filename="CMDRead.h" />
+		<Unit filename="Camera.h" />
+		<Unit filename="Command.cpp" />
+		<Unit filename="Command.h" />
+		<Unit filename="Dispatcher.cpp" />
+		<Unit filename="Dispatcher.h" />
+		<Unit filename="ImageResizer.cpp" />
+		<Unit filename="ImageResizer.h" />
+		<Unit filename="Light.h" />
+		<Unit filename="Object.cpp" />
+		<Unit filename="Object.h" />
+		<Unit filename="Ray.h" />
+		<Unit filename="RayTracer.cpp" />
+		<Unit filename="RayTracer.h" />
+		<Unit filename="Vector3.h" />
+		<Unit filename="include/GL/gl.h" />
+		<Unit filename="include/GL/gl_mangle.h" />
+		<Unit filename="include/GL/glext.h" />
+		<Unit filename="include/GL/glu.h" />
+		<Unit filename="include/GL/glu_mangle.h" />
+		<Unit filename="include/GL/glut.h" />
+		<Unit filename="include/GL/glutf90.h" />
+		<Unit filename="include/GL/glx.h" />
+		<Unit filename="include/GL/glx_mangle.h" />
+		<Unit filename="include/GL/glxext.h" />
+		<Unit filename="include/GL/glxint.h" />
+		<Unit filename="include/GL/glxmd.h" />
+		<Unit filename="include/GL/glxproto.h" />
+		<Unit filename="include/GL/glxtokens.h" />
+		<Unit filename="include/GL/internal/glcore.h" />
+		<Unit filename="include/GL/osmesa.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Object.cpp">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="tiff.cpp" />
+		<Unit filename="tiff.h" />
+		<Unit filename="transformation.cpp" />
+		<Unit filename="transformation.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
